# generator-python-cli

./: README.md  copier.yml  pyproject.toml
template/: .gitignore  .lvimrc  .pre-commit-config.yaml  .pycamouflage_whitelist  README.md.tmpl  pyproject.toml.tmpl  setup.cfg.tmpl  vulture_whitelist.py.tmpl
template/src/[[_folder_name]]/: cli.py.tmpl
template/tests/: test_[[_folder_name]].py.tmpl  test_cli.py.tmpl
tests/: test_project_generation.py
