[tool.poetry]
name = "generator-python-cli"
version = "0.1.0"
description = "Generator for cli tools in python."
authors = ["Sathors <sathors@free.fr>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
copier = "^5.1.0"
pytest-watch = "^4.2.0"
GitPython = "^3.1.24"
taskipy = "^1.10.1"

[tool.taskipy.tasks]
copier = "copier --vcs-ref HEAD ."
test = "pytest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
